# glitch_guardian

./: .gitignore  Cargo.toml  README.md  app.prod.yml  app.test.yml  app.yml  deny.toml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  lint.yml  release-plz.yml
az_func/: host.json
crates/handler/: Cargo.toml
crates/handler/schemas/graphql/: README.md  mutation_gh_project_add_item.graphql
crates/handler/src/: api.rs  main.rs  main_tests.rs  telemetry.rs
crates/handler/src/api/: installations.rs  issues.rs  projects.rs  prs.rs  repositories.rs
env/: main.tf  variables.tf
lib/xtask/: Cargo.toml
lib/xtask/src/: main.rs  main_tests.rs
tests/: github_api_tests.rs
