[package]
authors.workspace = true
description = "A github bot that handles the administrative tasks for different repositories."
edition = "2021"
license-file.workspace = true
name = "handler"
repository.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#
# Dependencies
#

[dependencies]
anyhow = { workspace = true }
axum = "0.7.5"
azure_identity = "0.20.0"
azure_security_keyvault = "0.20.0"
bytes = "1.7.1"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
octocrab = "0.39.0"
reqwest = "0.12.5"
ring = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }

# See https://github.com/sfackler/rust-openssl/issues/1627
# and https://docs.rs/openssl/latest/openssl/#vendored
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }

[dev-dependencies]
mockito = "1.5.0"

# The build target for the azure functions binary
#[target.x86_64-unknown-linux-musl]
#linker = "rust-lld"
